--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,4 +192,69 @@ main {
     min-height: 90px;
     padding: 10px;
 }
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+}
+
+/* Media query: tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
+    /* Header */
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
+    }
+
+    #menu {
+        display: flex;
+    }
+
+    #menu > li {
+        padding-left: 1rem;
+    }
+
+    .nav-toggle-label {
+        display: none;
+    }
+
+    #logo {
+        font-size: 280%;
+        line-height: 40px;
+        margin: 0 0.5rem;
+    }
+    
+    header p {
+        font-family: 'League-spartan', sans-serif;
+        color: #8A6A74;
+        font-size: 110%;
+        margin-left: 10px;
+    }
+    /* Main content */
+    main {
+        /* Push main content down to accommodate larger header */
+        margin-top: 79px;
+    }
+
+    /* Banner */
+    #banner-text {
+        background-color: rgba(255, 229, 217, .7);
+        font-size: 200%;
+        text-align: center;
+        position: absolute;
+        bottom: 150px;
+        width: 100%;
+        min-height: 90px;
+        padding: 10px;
+
+    }
+}
+
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover{
+        border-bottom: 1px solid #3a3a3a;
+    }
+}
 
