--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,12 +18,15 @@ body {
     font-family: 'League-spartan', sans-serif;
 }
 
-h1,
-h2,
-h3,
-h4 {
+h1, h2, h3, h4 {
     font-family: 'League-spartan', sans-serif;
     text-transform: lowercase;
+    letter-spacing: 0;
+    color: #8A6A74;
+}
+
+h5 {
+    font-family: 'League-spartan', sans-serif;
     letter-spacing: 0;
     color: #8A6A74;
 }
@@ -137,7 +140,7 @@ main {
     font-size: 130%;
     text-align: center;
     position: absolute;
-    bottom: 160px;
+    bottom: 180px;
     min-width: 70%;
     min-height: 130px;
     padding: 10px;
@@ -180,11 +183,11 @@ main {
     background-color: #D8E2DC;
 }
 
-/* Second Banner Box including Class Styles */
+/* Second Banner Box 'Try out class styles' */
 #banner-class-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
     background-color: rgba(255, 229, 217, .7);
-    font-size: 130%;
+    font-size: 120%;
     text-align: center;
     position: absolute;
     bottom: 0px;
@@ -192,6 +195,76 @@ main {
     min-height: 90px;
     padding: 10px;
 }
+#banner-class-text h5 {
+    font-size: 110%;
+    line-height: 25px;
+}
+
+#banner-class-text hr {
+    border-top: #8A6A74;
+    margin: 5px 0;
+}
+
+#banner-class-text p {
+    line-height: 25px;
+    color: #8A6A74;
+}
+
+/* Contact Us Form Main Section */
+
+#contact-us {
+    background-image: url("../images/signup-image.webp");
+    background-size: cover;
+    background-position: 75%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+}
+
+
+#contact-us-form {
+    color: #8A6A74;
+    background-color: rgba(255, 229, 217, .7);
+    padding: 30px;
+    width: auto;
+}
+
+
+#contact-us-form>h2 {
+    color: #8A6A74;
+    margin-bottom: 20px;
+}
+
+.text-input {
+    background: white;
+    color: #8A6A74;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+textarea {
+    background: white;
+    color: #8A6A74;
+    width: 100%;
+    height: 50px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+.send {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #8A6A74;
+    color: #fafafa;
+}
+
 /* Media query: large or landscape phones (576px and up) */
 @media screen and (min-width: 576px) {
 }
