--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,6 +210,31 @@ main {
     color: #8A6A74;
 }
 
+/* Main Content / Why us? */
+#why-us {
+    width: 100%;
+    height: 250px;
+    position: ;
+    text-align: center;
+    padding: 50px;
+    margin-bottom: 20px;
+}
+
+#why-us h1 {
+    font-size: 200%;
+    line-height: 30px;
+}
+
+#why-us hr {
+    border-top: #8A6A74;
+    margin: 25px 0;
+}
+
+#why-us p {
+    line-height: 25px;
+    color: #8A6A74;
+}
+
 /* Contact Us Form Main Section */
 
 #contact-us {
