--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,12 +125,12 @@ nav {
     margin: 0 0.5rem;
 }
 
-/* Main Content */
+/* Main Content for HOMEPAGE */
 main {
     /* Enlarge main element to push footer down*/
     flex: 1 0 auto;
     /* Add margin at the top to prevent content from being covered by the header */
-    margin-top: 225px;
+    margin-top: 100px;
     /* Enable flex properties for child elements */
     display: flex;
     flex-direction: column;
@@ -223,6 +223,83 @@ main {
 #banner-class-text p {
     line-height: 25px;
     color: #8A6A74;
+}
+
+/* Main Content for Sub Pages */
+#pages-main {
+    /* Enlarge main element to push footer down*/
+    flex: 1 0 auto;
+    /* Add margin at the top to prevent content from being covered by the header */
+    margin-top: 150px;
+    /* Enable flex properties for child elements */
+    display: flex;
+    flex-direction: column;
+}
+
+/* Banner Content for CLASSES PAGE */
+#page-banner-content {
+    height: 200px;
+    width: 100%;
+    background: url(../images/brighton-beach-banner-page.jpg) no-repeat center center/cover;
+    position: relative;
+}
+
+/* First Page Title Box */
+#page-banner-text {
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(255, 255, 255, .7);
+    font-size: 180%;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+}
+
+#page-banner-text h2 {
+    color: #8A6A74;
+}
+
+#page-banner-text h4 {
+    font-size: 50%;
+}
+
+#page-banner-text a {
+    font-size: 12px;
+}
+
+#page-banner-text p {
+    line-height: 20px;
+    font-size: 12px;
+    color: #8A6A74;
+}
+
+#page-cta {
+    padding-top: 10px;
+}
+
+.button {
+    background-color: #D8E2DC;
+    border: none;
+    color: white;
+    padding: 8px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 8px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.button4 {
+    background-color: #D8E2DC;
+    color: black;
+    border: 2px solid #D8E2DC;
+}
+
+.button4:hover {
+    background-color: #D8E2DC;
 }
 
 /* Main Content / Why us? */
