--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -482,13 +482,13 @@ textarea {
         margin-left: 10px;
     }
 
-    /* Main content */
+    /* Main content Homepage */
     main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
 
-    /* Banner */
+    /* Banner Homepage */
     #banner-text {
         background-color: rgba(255, 229, 217, .7);
         font-size: 200%;
@@ -501,7 +501,49 @@ textarea {
 
     }
 
-    /* Main info and Why Us Section */
+    /* Banner Content for CLASSES PAGE */
+#page-banner-content {
+    height: 200px;
+    width: 100%;
+    background: url(../images/brighton-beach-banner-page.jpg) no-repeat center center/cover;
+    position: relative;
+}
+
+/* Sub Page Title Box */
+#page-banner-text {
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(255, 255, 255, .7);
+    font-size: 180%;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding-top: 40px;
+}
+
+#page-banner-text h2 {
+    color: #8A6A74;
+}
+
+#page-banner-text h4 {
+    font-size: 60%;
+}
+
+#page-banner-text a {
+    font-size: 18px;
+}
+
+#page-banner-text p {
+    line-height: 20px;
+    font-size: 16px;
+    color: #8A6A74;
+}
+
+#page-cta {
+    padding-top: 10px;
+}
+
+    /* Main info and Why Us Section Homepage */
     #main-info {
         max-width: fit-content;
         margin-left: auto;
