--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@ main {
     text-align: center;
     position: absolute;
     bottom: 180px;
-    min-width: 70%;
+    min-width: 80%;
     min-height: 130px;
     padding: 10px;
 }
@@ -192,14 +192,15 @@ main {
 
 .button4 {
     background-color: #D8E2DC;
-    color: #8A6A74
+    color: #8A6A74;
     border: 2px solid #D8E2DC;
 }
 
 .button4:hover {
     background-color: #D8E2DC;
 }
-/* Second Banner Box 'Try out class styles' */
+
+/* Second Banner Box 'Try out class styles' Homepage */
 #banner-class-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
     background-color: rgba(255, 229, 217, .7);
@@ -280,7 +281,7 @@ main {
     padding-top: 10px;
 }
 
-/* Main Content / Why us? */
+/* Main Content / Why us? Homepage */
 
 #main-info {
     max-width: fit-content;
@@ -308,7 +309,37 @@ main {
     color: #8A6A74;
 }
 
-/* Main content Images */
+#why-us-list {
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#why-us-list h2 {
+    color: #8A6A74;
+    text-align: center;
+    padding: 50px 50px;
+    padding-bottom: 20px;
+
+}
+
+#why-us-list li {
+    color: #8A6A74;
+    text-align: center;
+    padding: 5px;
+}
+
+.button5 {
+    background-color: #fafafa;
+    color: #8A6A74;
+    border: 2px solid #D8E2DC;
+}
+
+.button4:hover {
+    background-color: #D8E2DC;
+}
+
+/* Main content Images Homepage */
 
 
 #studio-images img {
@@ -390,7 +421,10 @@ textarea {
     padding-bottom: 20px;
 }
 
-#footer h1, h2, a, p {
+#footer h1,
+h2,
+a,
+p {
     color: #FFE5D9;
     max-width: fit-content;
     margin-left: auto;
@@ -502,46 +536,46 @@ textarea {
     }
 
     /* Banner Content for CLASSES PAGE */
-#page-banner-content {
-    height: 200px;
-    width: 100%;
-    background: url(../images/brighton-beach-banner-page.jpg) no-repeat center center/cover;
-    position: relative;
-}
+    #page-banner-content {
+        height: 200px;
+        width: 100%;
+        background: url(../images/brighton-beach-banner-page.jpg) no-repeat center center/cover;
+        position: relative;
+    }
 
-/* Sub Page Title Box */
-#page-banner-text {
-    /* Final rgba value sets the opacity so it is semi-transparent */
-    background-color: rgba(255, 255, 255, .7);
-    font-size: 180%;
-    text-align: center;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    padding-top: 40px;
-}
+    /* Sub Page Title Box */
+    #page-banner-text {
+        /* Final rgba value sets the opacity so it is semi-transparent */
+        background-color: rgba(255, 255, 255, .7);
+        font-size: 180%;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        padding-top: 40px;
+    }
 
-#page-banner-text h2 {
-    color: #8A6A74;
-}
+    #page-banner-text h2 {
+        color: #8A6A74;
+    }
 
-#page-banner-text h4 {
-    font-size: 60%;
-}
+    #page-banner-text h4 {
+        font-size: 60%;
+    }
 
-#page-banner-text a {
-    font-size: 18px;
-}
+    #page-banner-text a {
+        font-size: 18px;
+    }
 
-#page-banner-text p {
-    line-height: 20px;
-    font-size: 16px;
-    color: #8A6A74;
-}
+    #page-banner-text p {
+        line-height: 20px;
+        font-size: 16px;
+        color: #8A6A74;
+    }
 
-#page-cta {
-    padding-top: 10px;
-}
+    #page-cta {
+        padding-top: 10px;
+    }
 
     /* Main info and Why Us Section Homepage */
     #main-info {
@@ -581,31 +615,31 @@ textarea {
         border-bottom: 1px solid #3a3a3a;
     }
 
-        /* Main info and Why Us Section */
-        #main-info {
-            max-width: fit-content;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    
-        #why-us {
-            margin: auto;
-            width: 60%;
-        }
-    
-        #why-us h1 {
-            font-size: 250%;
-            line-height: 30px;
-        }
-    
-        #why-us hr {
-            border-top: #8A6A74;
-            margin: 25px 0;
-        }
-    
-        #why-us p {
-            font-size: 120%;
-            line-height: 25px;
-            color: #8A6A74;
-        }
+    /* Main info and Why Us Section */
+    #main-info {
+        max-width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #why-us {
+        margin: auto;
+        width: 60%;
+    }
+
+    #why-us h1 {
+        font-size: 250%;
+        line-height: 30px;
+    }
+
+    #why-us hr {
+        border-top: #8A6A74;
+        margin: 25px 0;
+    }
+
+    #why-us p {
+        font-size: 120%;
+        line-height: 25px;
+        color: #8A6A74;
+    }
 }
