--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,6 +310,7 @@ main {
 }
 
 #why-us-list {
+    background-color: #FFE5D9;
     max-width: fit-content;
     margin-left: auto;
     margin-right: auto;
@@ -329,15 +330,6 @@ main {
     padding: 5px;
 }
 
-.button5 {
-    background-color: #fafafa;
-    color: #8A6A74;
-    border: 2px solid #D8E2DC;
-}
-
-.button4:hover {
-    background-color: #D8E2DC;
-}
 
 /* Main content Images Homepage */
 
