Added class style section to classes.html and made responsive for mobile and tablets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,13 @@
 /* Google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /* Asterisk wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
 /* General styles */
 body {
     min-height: 100vh;
@@ -15,6 +17,7 @@ body {
     color: #3a3a3a;
     font-family: 'League-spartan', sans-serif;
 }
+
 h1,
 h2,
 h3,
@@ -24,27 +27,32 @@ h4 {
     letter-spacing: 0;
     color: #8A6A74;
 }
+
 h5 {
     font-family: 'League-spartan', sans-serif;
     letter-spacing: 0;
     color: #8A6A74;
 }
+
 p {
     font-family: 'poppins', sans-serif;
     letter-spacing: 0;
     color: #8A6A74;
     font-size: 18px;
 }
+
 /* Responsive for Mobile Code */
 body {
     background-color: #D8E2DC;
 }
+
 .container {
     width: 100%;
     max-width: 1080px;
     margin: 0 auto;
     background-color: white;
 }
+
 /* Header */
 header {
     background-color: #FFE5D9;
@@ -56,10 +64,12 @@ header {
     justify-content: space-between;
     align-items: baseline;
 }
+
 header a {
     text-decoration: none;
     color: inherit;
 }
+
 header p {
     font-family: 'League-spartan', sans-serif;
     color: #8A6A74;
@@ -67,20 +77,24 @@ header p {
     margin-left: 10px;
     line-height: 30px;
 }
+
 #menu {
     font-size: 100%;
     letter-spacing: 1px;
     list-style-type: none;
 }
+
 #menu>li {
     margin-bottom: 1em;
     font-family: "poppins", sans-serif;
     color: #8A6A74;
     font-size: 120%;
 }
+
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+
 /* Navbar styles with dropdown toggle */
 nav {
     position: absolute;
@@ -91,21 +105,26 @@ nav {
     display: none;
     top: 100%;
 }
+
 /* Nav toggle */
 #nav-toggle:checked~nav {
     display: block;
 }
+
 #nav-toggle {
     display: none;
 }
+
 .nav-toggle-label {
     font-size: 2rem;
 }
+
 .logo {
     font-size: 200%;
     line-height: 30px;
     margin: 0 0.5rem;
 }
+
 /* Main Content for HOMEPAGE */
 main {
     /* Enlarge main element to push footer down*/
@@ -116,6 +135,7 @@ main {
     display: flex;
     flex-direction: column;
 }
+
 /* Banner Content Homepage */
 #banner-content {
     height: 700px;
@@ -123,6 +143,7 @@ main {
     background: url(../images/brighton-beach-yoga-homepage.jpg) no-repeat center center/cover;
     position: relative;
 }
+
 /* First Banner Text Box, 'try your first class free' Homepage */
 #banner-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
@@ -135,20 +156,25 @@ main {
     min-height: 130px;
     padding: 10px;
 }
+
 #banner-text h2 {
     color: white;
 }
+
 #banner-text h4 {
     font-size: 85%;
     padding-bottom: 10px;
 }
+
 #banner-text a {
     font-size: smaller;
 }
+
 #banner-cta p {
     color: #8A6A74;
     line-height: 20px;
 }
+
 .button {
     background-color: #D8E2DC;
     border: none;
@@ -162,14 +188,17 @@ main {
     transition-duration: 0.4s;
     cursor: pointer;
 }
+
 .button4 {
     background-color: #D8E2DC;
     color: #8A6A74;
     border: 2px solid #D8E2DC;
 }
+
 .button4:hover {
     background-color: #D8E2DC;
 }
+
 /* Second Banner Box 'Try out class styles' Homepage */
 #banner-class-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
@@ -182,18 +211,22 @@ main {
     min-height: 90px;
     padding: 10px;
 }
+
 #banner-class-text h5 {
     font-size: 110%;
     line-height: 25px;
 }
+
 #banner-class-text hr {
     border-top: #8A6A74;
     margin: 5px 0;
 }
+
 #banner-class-text p {
     line-height: 25px;
     color: #8A6A74;
 }
+
 /* Main Content for Sub Pages */
 #pages-main {
     /* Enlarge main element to push footer down*/
@@ -204,13 +237,15 @@ main {
     display: flex;
     flex-direction: column;
 }
+
 /* Banner Content for CLASSES PAGE */
 #page-banner-content {
-    height: 250px;
+    height: 200px;
     width: 100%;
     background: url(../images/brighton-beach-banner-page.jpg) no-repeat center center/cover;
     position: relative;
 }
+
 /* Sub Page Title Box */
 #page-banner-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
@@ -218,51 +253,62 @@ main {
     font-size: 180%;
     text-align: center;
     position: absolute;
+    bottom: 0px;
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: 40px;
 }
+
 #page-banner-text h2 {
     color: #8A6A74;
 }
+
 #page-banner-text h4 {
     font-size: 50%;
 }
+
 #page-banner-text a {
     font-size: 12px;
 }
+
 #page-banner-text p {
     line-height: 20px;
     font-size: 14px;
     color: #8A6A74;
 }
+
 #page-cta {
     padding-top: 10px;
 }
+
 /* Main Content / Why us? Homepage */
 #main-info {
     max-width: fit-content;
     margin-left: auto;
     margin-right: auto;
 }
+
 #why-us {
     text-align: center;
     padding: 40px 40px;
 }
+
 #why-us h1 {
     font-size: 200%;
     line-height: 30px;
 }
+
 #why-us hr {
     border-top: #8A6A74;
     margin: 25px 0;
 }
+
 #why-us p {
     line-height: 25px;
     color: #8A6A74;
 }
 
-/* Second Section / Benefits List */
+/* Second Section / Benefits List Homepage */
 #why-us-list {
     max-width: 100%;
     margin-left: auto;
@@ -270,11 +316,13 @@ main {
     background-color: #FFE5D9;
     padding: 30px;
 }
+
 #why-us-list h2 {
     color: #8A6A74;
     text-align: center;
     padding-bottom: 20px;
 }
+
 #why-us-list li {
     color: #8A6A74;
     text-align: center;
@@ -289,6 +337,7 @@ main {
     line-height: 1em;
     margin-top: 10px;
 }
+
 /* Contact Us Form Main Section */
 #contact-us {
     background-image: url("../images/signup-image.webp");
@@ -297,17 +346,20 @@ main {
     padding: 20px 10% 20px 10%;
     flex-grow: 1;
 }
+
 #contact-us-form {
     color: #8A6A74;
     background-color: rgba(255, 229, 217, .7);
     padding: 30px;
     width: auto;
 }
+
 #contact-us-form>h2 {
     color: #8A6A74;
     margin-bottom: 10px;
     text-align: center;
 }
+
 #contact-us p {
     color: #8A6A74;
     text-align: center;
@@ -315,6 +367,7 @@ main {
     font-family: 'poppins', sans-serif;
     margin-bottom: 20px;
 }
+
 .text-input {
     background: white;
     color: #8A6A74;
@@ -325,6 +378,7 @@ main {
     border-radius: 2px;
     padding: 0 5px;
 }
+
 textarea {
     background: white;
     color: #8A6A74;
@@ -335,6 +389,7 @@ textarea {
     border-radius: 2px;
     padding: 0 5px;
 }
+
 .send {
     margin-top: 20px;
     border-radius: 2px;
@@ -343,12 +398,114 @@ textarea {
     background-color: #8A6A74;
     color: #fafafa;
 }
+
+/* Main Section / Classes Pages */
+#main-pages-info {
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.classes {
+    text-align: center;
+    padding: 40px 40px;
+}
+
+.classes h1 {
+    font-size: 200%;
+    line-height: 30px;
+}
+
+.classes hr {
+    border-top: #8A6A74;
+    margin: 25px 0;
+}
+
+.classes p {
+    line-height: 25px;
+    color: #8A6A74;
+}
+
+/* Second Section Pages / Class Styles */
+#vinyasa {
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #FFE5D9;
+    padding: 30px;
+}
+
+#vinyasa h2 {
+    color: #8A6A74;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+#vinyasa p {
+    color: #8A6A74;
+    text-align: center;
+    padding: 5px;
+}
+
+#gentle {
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #D8E2DC;
+    padding: 30px;
+}
+
+#gentle h2 {
+    color: #8A6A74;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+#gentle p {
+    color: #8A6A74;
+    text-align: center;
+    padding: 5px;
+}
+
+#active {
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #FFE5D9;
+    padding: 30px;
+}
+
+#active h2 {
+    color: #8A6A74;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+#active p {
+    color: #8A6A74;
+    text-align: center;
+    padding: 5px;
+}
+
+/* Class Images / Sub Page Classes.html */
+.class-images img {
+    width: 100%;
+    height: auto;
+    line-height: 1em;
+}
+
+.class-images {
+    line-height: 0;
+}
+
+
 /* Footer Content */
 #footer {
     background: #8A6A74;
     padding-top: 20px;
     padding-bottom: 20px;
 }
+
 #footer h1,
 h2,
 a,
@@ -363,53 +520,77 @@ p {
 #footer h1 {
     font-size: 200%;
 }
+
 #footer-contact {
     text-align: center;
     line-height: 30px;
 }
+
 #footer-contact hr {
     border-top: #D8E2DC;
     margin: 20px 0;
 }
+
 .fa-instagram {
     padding-top: 30px;
     padding-bottom: 30px;
 }
+
 /* Media query: large or landscape phones (576px and up) */
 @media screen and (min-width: 576px) {
+
     /* Main Content / Why us? */
     #main-info {
         max-width: fit-content;
         margin-left: auto;
         margin-right: auto;
     }
+
     #why-us {
         padding: 50px 50px;
     }
+
     #why-us h1 {
         font-size: 250%;
         line-height: 30px;
     }
+
     #why-us hr {
         border-top: #8A6A74;
         margin: 25px 0;
     }
+
     #why-us p {
         font-size: 130%;
         line-height: 25px;
         color: #8A6A74;
     }
 
+    /* Class Images / Sub Page Classes.html */
+    .class-images img {
+        height: auto;
+        width: 100%;
+    }
+
+    .gentle-img {
+        display: none;
+    }
+    .vinyasa-img {
+        display: none;
+    }
+
     /* Banner Content for CLASSES PAGE */
     #page-banner-content {
-        height: 180px;
+        height: 200px;
         width: 100%;
         background: url(../images/brighton-beach-banner-page.jpg) no-repeat center center/cover;
         position: relative;
     }
 }
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+
     /* Header */
     nav {
         display: block;
@@ -418,31 +599,38 @@ p {
         width: fit-content;
         padding-right: 1rem;
     }
+
     #menu {
         display: flex;
     }
+
     #menu>li {
         padding-left: 1rem;
     }
+
     .nav-toggle-label {
         display: none;
     }
+
     .logo {
         font-size: 280%;
         line-height: 40px;
         margin: 0 0.5rem;
     }
+
     header p {
         font-family: 'League-spartan', sans-serif;
         color: #8A6A74;
         font-size: 110%;
         margin-left: 10px;
     }
+
     /* Main content Homepage */
     main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
+
     /* Banner Homepage */
     #banner-text {
         background-color: rgba(255, 229, 217, .7);
@@ -454,13 +642,15 @@ p {
         min-height: 90px;
         padding: 10px;
     }
+
     /* Banner Content for CLASSES PAGE */
     #page-banner-content {
-        height: 180px;
+        height: 200px;
         width: 100%;
         background: url(../images/brighton-beach-banner-page.jpg) no-repeat center center/cover;
         position: relative;
     }
+
     /* Sub Page Title Box */
     #page-banner-text {
         /* Final rgba value sets the opacity so it is semi-transparent */
@@ -472,75 +662,100 @@ p {
         height: 100%;
         padding-top: 40px;
     }
+
     #page-banner-text h2 {
         color: #8A6A74;
     }
+
     #page-banner-text h4 {
         font-size: 60%;
     }
+
     #page-banner-text a {
         font-size: 18px;
     }
+
     #page-banner-text p {
         line-height: 20px;
         font-size: 16px;
         color: #8A6A74;
     }
+
     #page-cta {
         padding-top: 10px;
     }
+
     /* Main info and Why Us Section Homepage */
     #main-info {
         max-width: fit-content;
         margin-left: auto;
         margin-right: auto;
     }
+
     #why-us {
         padding: 80px 80px;
     }
+
     #why-us h1 {
         font-size: 250%;
         line-height: 30px;
     }
+
     #why-us hr {
         border-top: #8A6A74;
         margin: 25px 0;
     }
+
     #why-us p {
         font-size: 120%;
         line-height: 25px;
         color: #8A6A74;
     }
+
     #studio-images img {
         column-count: 2;
     }
 }
+
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
+
     /* Main info and Why Us Section */
     #main-info {
         max-width: fit-content;
         margin-left: auto;
         margin-right: auto;
     }
+
     #why-us {
         margin: auto;
         width: 60%;
     }
+
     #why-us h1 {
         font-size: 250%;
         line-height: 30px;
     }
+
     #why-us hr {
         border-top: #8A6A74;
         margin: 25px 0;
     }
+
     #why-us p {
         font-size: 120%;
         line-height: 25px;
         color: #8A6A74;
     }
+
+    /* Main Section / Classes Pages */
+#main-pages-info {
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 }
