--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,60 +227,6 @@ main {
     color: #8A6A74;
 }
 
-/* Main Content for Sub Pages */
-#pages-main {
-    /* Enlarge main element to push footer down*/
-    flex: 1 0 auto;
-    /* Add margin at the top to prevent content from being covered by the header */
-    margin-top: 125px;
-    /* Enable flex properties for child elements */
-    display: flex;
-    flex-direction: column;
-}
-
-/* Banner Content for CLASSES PAGE */
-#page-banner-content {
-    height: 200px;
-    width: 100%;
-    background: url(../images/brighton-beach-banner-page.jpg) no-repeat center center/cover;
-    position: relative;
-}
-
-/* Sub Page Title Box */
-#page-banner-text {
-    /* Final rgba value sets the opacity so it is semi-transparent */
-    background-color: rgba(255, 255, 255, .7);
-    font-size: 180%;
-    text-align: center;
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
-    height: 100%;
-    padding: 40px;
-}
-
-#page-banner-text h2 {
-    color: #8A6A74;
-}
-
-#page-banner-text h4 {
-    font-size: 50%;
-}
-
-#page-banner-text a {
-    font-size: 12px;
-}
-
-#page-banner-text p {
-    line-height: 20px;
-    font-size: 14px;
-    color: #8A6A74;
-}
-
-#page-cta {
-    padding-top: 10px;
-}
-
 /* Main Content / Why us? Homepage */
 #main-info {
     max-width: fit-content;
@@ -338,8 +284,8 @@ main {
     margin-top: 10px;
 }
 
-/* Contact Us Form Main Section */
-#contact-us {
+/* Contact Us Form Main Section Homepage */
+#newsletter {
     background-image: url("../images/signup-image.webp");
     background-size: cover;
     background-position: 75%;
@@ -347,25 +293,30 @@ main {
     flex-grow: 1;
 }
 
-#contact-us-form {
+#newsletter-form {
     color: #8A6A74;
     background-color: rgba(255, 229, 217, .7);
     padding: 30px;
     width: auto;
 }
 
-#contact-us-form>h2 {
+#newsletter-form>h2 {
     color: #8A6A74;
     margin-bottom: 10px;
     text-align: center;
 }
 
-#contact-us p {
+#newsletter p {
     color: #8A6A74;
     text-align: center;
     font-size: 16px;
     font-family: 'poppins', sans-serif;
     margin-bottom: 20px;
+}
+
+#newsletter-terms p {
+    font-size: 10px;
+    text-align: left;
 }
 
 .text-input {
@@ -399,29 +350,83 @@ textarea {
     color: #fafafa;
 }
 
-/* Main Section / Classes Pages */
+/* Main Content for Sub Pages */
+#pages-main {
+    /* Enlarge main element to push footer down*/
+    flex: 1 0 auto;
+    /* Add margin at the top to prevent content from being covered by the header */
+    margin-top: 125px;
+    /* Enable flex properties for child elements */
+    display: flex;
+    flex-direction: column;
+}
+
+/* Banner Content for CLASSES PAGE */
+#page-banner-content {
+    height: 200px;
+    width: 100%;
+    background: url(../images/brighton-beach-banner-page.jpg) no-repeat center center/cover;
+    position: relative;
+}
+
+/* Sub Page Title Box */
+#page-banner-text {
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(255, 255, 255, .7);
+    font-size: 180%;
+    text-align: center;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    padding: 40px;
+}
+
+#page-banner-text h2 {
+    color: #8A6A74;
+}
+
+#page-banner-text h4 {
+    font-size: 50%;
+}
+
+#page-banner-text a {
+    font-size: 12px;
+}
+
+#page-banner-text p {
+    line-height: 20px;
+    font-size: 14px;
+    color: #8A6A74;
+}
+
+#page-cta {
+    padding-top: 10px;
+}
+
+/* Main Section / Sub Pages */
 #main-pages-info {
     max-width: fit-content;
     margin-left: auto;
     margin-right: auto;
 }
 
-.classes {
+.pages-content {
     text-align: center;
     padding: 40px 40px;
 }
 
-.classes h1 {
+.pages-content h1 {
     font-size: 200%;
     line-height: 30px;
 }
 
-.classes hr {
+.pages-content hr {
     border-top: #8A6A74;
     margin: 25px 0;
 }
 
-.classes p {
+.pages-content p {
     line-height: 25px;
     color: #8A6A74;
 }
@@ -498,7 +503,12 @@ textarea {
     line-height: 0;
 }
 
+/* Images for About Us Page */
+#founder-img img {
+    width: 100%;
+    height: auto;
 
+}
 /* Footer Content */
 #footer {
     background: #8A6A74;
@@ -790,7 +800,7 @@ p {
 
      /* Class Styles / Classes Page */
 
-     #vinyasa  {
+    #vinyasa  {
         width: 1080px;
     }
     #active  {
