--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,11 @@
 /* Google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 /* Asterisk wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-
 /* General styles */
 body {
     min-height: 100vh;
@@ -17,7 +15,6 @@ body {
     color: #3a3a3a;
     font-family: 'League-spartan', sans-serif;
 }
-
 h1,
 h2,
 h3,
@@ -27,32 +24,27 @@ h4 {
     letter-spacing: 0;
     color: #8A6A74;
 }
-
 h5 {
     font-family: 'League-spartan', sans-serif;
     letter-spacing: 0;
     color: #8A6A74;
 }
-
 p {
     font-family: 'poppins', sans-serif;
     letter-spacing: 0;
     color: #8A6A74;
     font-size: 18px;
 }
-
 /* Responsive for Mobile Code */
 body {
     background-color: #D8E2DC;
 }
-
 .container {
     width: 100%;
     max-width: 1080px;
     margin: 0 auto;
     background-color: white;
 }
-
 /* Header */
 header {
     background-color: #FFE5D9;
@@ -64,12 +56,10 @@ header {
     justify-content: space-between;
     align-items: baseline;
 }
-
 header a {
     text-decoration: none;
     color: inherit;
 }
-
 header p {
     font-family: 'League-spartan', sans-serif;
     color: #8A6A74;
@@ -77,24 +67,20 @@ header p {
     margin-left: 10px;
     line-height: 30px;
 }
-
 #menu {
     font-size: 100%;
     letter-spacing: 1px;
     list-style-type: none;
 }
-
 #menu>li {
     margin-bottom: 1em;
     font-family: "poppins", sans-serif;
     color: #8A6A74;
     font-size: 120%;
 }
-
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
-
 /* Navbar styles with dropdown toggle */
 nav {
     position: absolute;
@@ -105,27 +91,22 @@ nav {
     display: none;
     top: 100%;
 }
-
 /* Nav toggle */
 #nav-toggle:checked~nav {
     display: block;
 }
-
 #nav-toggle {
     display: none;
 }
-
 .nav-toggle-label {
     font-size: 2rem;
 }
-
 .logo {
     font-size: 200%;
     line-height: 30px;
     margin: 0 0.5rem;
     color: #8A6A74;
 }
-
 /* Main Content for HOMEPAGE */
 main {
     /* Enlarge main element to push footer down*/
@@ -136,15 +117,13 @@ main {
     display: flex;
     flex-direction: column;
 }
-
 /* Banner Content Homepage */
 #banner-content {
     height: 700px;
     width: 100%;
-    background: url(../images/brighton-beach-yoga-homepage.jpg) no-repeat center center/cover;
+    background: url(../images/brighton-beach-yoga-homepage.jpeg) no-repeat center center/cover;
     position: relative;
 }
-
 /* First Banner Text Box, 'try your first class free' Homepage */
 #banner-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
@@ -157,25 +136,20 @@ main {
     min-height: 130px;
     padding: 10px;
 }
-
 #banner-text h2 {
     color: white;
 }
-
 #banner-text h4 {
     font-size: 85%;
     padding-bottom: 10px;
 }
-
 #banner-text a {
     font-size: smaller;
 }
-
 #banner-cta p {
     color: #8A6A74;
     line-height: 20px;
 }
-
 .button {
     background-color: #D8E2DC;
     border: none;
@@ -189,17 +163,14 @@ main {
     transition-duration: 0.4s;
     cursor: pointer;
 }
-
 .button4 {
     background-color: #D8E2DC;
     color: #8A6A74;
     border: 2px solid #D8E2DC;
 }
-
 .button4:hover {
     background-color: #D8E2DC;
 }
-
 /* Second Banner Box 'Try out class styles' Homepage */
 #banner-class-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
@@ -212,49 +183,40 @@ main {
     min-height: 90px;
     padding: 10px;
 }
-
 #banner-class-text h5 {
     font-size: 110%;
     line-height: 25px;
 }
-
 #banner-class-text hr {
     border-top: #8A6A74;
     margin: 5px 0;
 }
-
 #banner-class-text p {
     line-height: 25px;
     color: #8A6A74;
 }
-
 /* Main Content / Why us? Homepage */
 #main-info {
     max-width: fit-content;
     margin-left: auto;
     margin-right: auto;
 }
-
 #why-us {
     text-align: center;
     padding: 40px 40px;
 }
-
 #why-us h1 {
     font-size: 200%;
     line-height: 30px;
 }
-
 #why-us hr {
     border-top: #8A6A74;
     margin: 25px 0;
 }
-
 #why-us p {
     line-height: 25px;
     color: #8A6A74;
 }
-
 /* Second Section / Benefits List Homepage */
 #why-us-list {
     max-width: 100%;
@@ -263,20 +225,17 @@ main {
     background-color: #FFE5D9;
     padding: 30px;
 }
-
 #why-us-list h2 {
     color: #8A6A74;
     text-align: center;
     padding-bottom: 20px;
 }
-
 #why-us-list li {
     color: #8A6A74;
     text-align: center;
     padding: 5px;
     list-style: none;
 }
-
 /* Main content Images Homepage */
 #studio-images img {
     width: 100%;
@@ -284,29 +243,24 @@ main {
     line-height: 1em;
     margin-top: 10px;
 }
-
 /* Contact Us Form Main Section Homepage */
 #newsletter {
-    background-image: url("../images/signup-image.webp");
     background-size: cover;
     background-position: 75%;
     padding: 20px 10% 20px 10%;
     flex-grow: 1;
 }
-
 #newsletter-form {
     color: #8A6A74;
     background-color: rgba(255, 229, 217, .7);
     padding: 30px;
     width: auto;
 }
-
 #newsletter-form>h2 {
     color: #8A6A74;
     margin-bottom: 10px;
     text-align: center;
 }
-
 #newsletter p {
     color: #8A6A74;
     text-align: center;
@@ -314,12 +268,10 @@ main {
     font-family: 'poppins', sans-serif;
     margin-bottom: 20px;
 }
-
 #newsletter-terms p {
     font-size: 10px;
     text-align: left;
 }
-
 .text-input {
     background: white;
     color: #8A6A74;
@@ -330,7 +282,6 @@ main {
     border-radius: 2px;
     padding: 0 5px;
 }
-
 textarea {
     background: white;
     color: #8A6A74;
@@ -341,7 +292,6 @@ textarea {
     border-radius: 2px;
     padding: 0 5px;
 }
-
 .send {
     margin-top: 20px;
     border-radius: 2px;
@@ -350,7 +300,6 @@ textarea {
     background-color: #8A6A74;
     color: #fafafa;
 }
-
 /* Main Content for Sub Pages */
 #pages-main {
     /* Enlarge main element to push footer down*/
@@ -361,15 +310,13 @@ textarea {
     display: flex;
     flex-direction: column;
 }
-
 /* Banner Content for CLASSES PAGE */
 #page-banner-content {
     height: 200px;
     width: 100%;
-    background: url(../images/brighton-beach-banner-page.jpg) no-repeat center center/cover;
+    background: url(../images/brighton-beach-banner-page.jpeg) no-repeat center center/cover;
     position: relative;
 }
-
 /* Sub Page Title Box */
 #page-banner-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
@@ -382,56 +329,45 @@ textarea {
     height: 100%;
     padding: 40px;
 }
-
 #page-banner-text h2 {
     color: #8A6A74;
 }
-
 #page-banner-text h4 {
     font-size: 50%;
 }
-
 #page-banner-text a {
     font-size: 12px;
 }
-
 #page-banner-text p {
     line-height: 20px;
     font-size: 14px;
     color: #8A6A74;
 }
-
 #page-cta {
     padding-top: 10px;
 }
-
 /* Main Section / Sub Pages */
 #main-pages-info {
     max-width: fit-content;
     margin-left: auto;
     margin-right: auto;
 }
-
 .pages-content {
     text-align: center;
     padding: 40px 40px;
 }
-
 .pages-content h1 {
     font-size: 200%;
     line-height: 30px;
 }
-
 .pages-content hr {
     border-top: #8A6A74;
     margin: 25px 0;
 }
-
 .pages-content p {
     line-height: 25px;
     color: #8A6A74;
 }
-
 /* Second Section Pages / Class Styles */
 #vinyasa {
     max-width: 100%;
@@ -440,19 +376,16 @@ textarea {
     background-color: #FFE5D9;
     padding: 30px;
 }
-
 #vinyasa h2 {
     color: #8A6A74;
     text-align: center;
     padding-bottom: 20px;
 }
-
 #vinyasa p {
     color: #8A6A74;
     text-align: center;
     padding: 5px;
 }
-
 #gentle {
     max-width: 100%;
     margin-left: auto;
@@ -460,19 +393,16 @@ textarea {
     background-color: #D8E2DC;
     padding: 30px;
 }
-
 #gentle h2 {
     color: #8A6A74;
     text-align: center;
     padding-bottom: 20px;
 }
-
 #gentle p {
     color: #8A6A74;
     text-align: center;
     padding: 5px;
 }
-
 #active {
     max-width: 100%;
     margin-left: auto;
@@ -480,35 +410,29 @@ textarea {
     background-color: #FFE5D9;
     padding: 30px;
 }
-
 #active h2 {
     color: #8A6A74;
     text-align: center;
     padding-bottom: 20px;
 }
-
 #active p {
     color: #8A6A74;
     text-align: center;
     padding: 5px;
 }
-
 /* Class Images / Sub Page Classes.html */
 .class-images img {
     width: 100%;
     height: auto;
     line-height: 1em;
 }
-
 .class-images {
     line-height: 0;
 }
-
 /* Images for About Us Page */
 #founder-img img {
     width: 100%;
     height: auto;
-
 }
 /* Footer Content */
 #footer {
@@ -516,7 +440,6 @@ textarea {
     padding-top: 20px;
     padding-bottom: 20px;
 }
-
 #footer h1,
 h2,
 a,
@@ -527,7 +450,6 @@ p {
     margin-right: auto;
     text-wrap: wrap;
 }
-
 #footer-logo h2 {
     font-size: 200%;
 }
@@ -537,78 +459,63 @@ p {
     text-align: center;
     font-family: 'poppins', sans-serif;
 }
-
 #footer-contact {
     text-align: center;
     line-height: 30px;
 }
-
 #footer-contact hr {
     border-top: #D8E2DC;
     margin: 20px 0;
 }
-
 .fa-instagram {
     padding-top: 30px;
     padding-bottom: 30px;
 }
-
 /* Media query: large or landscape phones (576px and up) */
 @media screen and (min-width: 576px) {
-
     /* Main Content / Why us? */
     #main-info {
         max-width: fit-content;
         margin-left: auto;
         margin-right: auto;
     }
-
     #why-us {
         padding: 50px 50px;
     }
-
     #why-us h1 {
         font-size: 250%;
         line-height: 30px;
     }
-
     #why-us hr {
         border-top: #8A6A74;
         margin: 25px 0;
     }
-
     #why-us p {
         font-size: 130%;
         line-height: 25px;
         color: #8A6A74;
     }
-
     /* Class Images / Sub Page Classes.html */
     .class-images img {
         height: auto;
         width: 100%;
     }
-
     .gentle-img {
         display: none;
     }
-
     .vinyasa-img {
         display: none;
     }
-
     /* Banner Content for CLASSES PAGE */
     #page-banner-content {
         height: 200px;
         width: 100%;
-        background: url(../images/brighton-beach-banner-page.jpg) no-repeat center center/cover;
+        background: url(../images/brighton-beach-banner-page.jpeg) no-repeat center center/cover;
         position: relative;
     }
 }
-
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
-
     /* Header */
     nav {
         display: block;
@@ -617,38 +524,31 @@ p {
         width: fit-content;
         padding-right: 1rem;
     }
-
     #menu {
         display: flex;
     }
-
     #menu>li {
         padding-left: 1rem;
     }
-
     .nav-toggle-label {
         display: none;
     }
-
     .logo {
         font-size: 280%;
         line-height: 40px;
         margin: 0 0.5rem;
     }
-
     header p {
         font-family: 'League-spartan', sans-serif;
         color: #8A6A74;
         font-size: 110%;
         margin-left: 10px;
     }
-
     /* Main content Homepage */
     main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
-
     /* Banner Homepage */
     #banner-text {
         background-color: rgba(255, 229, 217, .7);
@@ -660,15 +560,13 @@ p {
         min-height: 90px;
         padding: 10px;
     }
-
     /* Banner Content for CLASSES PAGE */
     #page-banner-content {
         height: 200px;
         width: 100%;
-        background: url(../images/brighton-beach-banner-page.jpg) no-repeat center center/cover;
+        background: url(../images/brighton-beach-banner-page.jpeg) no-repeat center center/cover;
         position: relative;
     }
-
     /* Sub Page Title Box */
     #page-banner-text {
         /* Final rgba value sets the opacity so it is semi-transparent */
@@ -680,58 +578,46 @@ p {
         height: 100%;
         padding-top: 40px;
     }
-
     #page-banner-text h2 {
         color: #8A6A74;
     }
-
     #page-banner-text h4 {
         font-size: 60%;
     }
-
     #page-banner-text a {
         font-size: 18px;
     }
-
     #page-banner-text p {
         line-height: 20px;
         font-size: 16px;
         color: #8A6A74;
     }
-
     #page-cta {
         padding-top: 10px;
     }
-
     /* Main info and Why Us Section Homepage */
     #main-info {
         max-width: fit-content;
         margin-left: auto;
         margin-right: auto;
     }
-
     #why-us {
         padding: 80px 80px;
     }
-
     #why-us h1 {
         font-size: 250%;
         line-height: 30px;
     }
-
     #why-us hr {
         border-top: #8A6A74;
         margin: 25px 0;
     }
-
     #why-us p {
         font-size: 120%;
         line-height: 25px;
         color: #8A6A74;
     }
-
     /* Class Styles / Classes Page */
-
     #vinyasa  {
         width: 900px;
     }
@@ -741,11 +627,9 @@ p {
     #gentle  {
         width: 900px;
     }
-
     #studio-images img {
         column-count: 2;
     }
-
     .class-img {
         display: block;
         margin-left: auto;
@@ -753,7 +637,6 @@ p {
         width: 60%;
         padding-bottom: 20px;
     }
-
     .active-img {
         display: block;
         margin-left: auto;
@@ -763,58 +646,47 @@ p {
         padding-bottom: 20px;
     }
 }
-
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
-
     /* Main info and Why Us Section */
     #main-info {
         max-width: fit-content;
         margin-left: auto;
         margin-right: auto;
     }
-
     #why-us {
         margin: auto;
         width: 60%;
     }
-
     #why-us h1 {
         font-size: 250%;
         line-height: 30px;
     }
-
     #why-us hr {
         border-top: #8A6A74;
         margin: 25px 0;
     }
-
     #why-us p {
         font-size: 120%;
         line-height: 25px;
         color: #8A6A74;
     }
-
     /* Main Section / Classes Pages */
     .pages-content {
         width: 70%;
         margin-left: auto;
         margin-right: auto;
     }
-
     /* Newsletter */
     #newsletter {
         width: 60%;
         margin-left: auto;
         margin-right: auto;
     }
-
-
      /* Class Styles / Classes Page */
-
     #vinyasa  {
         width: 1080px;
     }
@@ -824,5 +696,6 @@ p {
     #gentle  {
         width: 1080px;
     }
-
+    #page-banner-content {
+    }
 }
